Merging refactoring changes from the main